# madrid_public_heatmap

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: maps.ipynb  statistics.ipynb
web_analytics/: __init__.py  cache.py  isochrones.py  schedules.py  utils.py
