[tool.poetry]
name = "web-analytics"
version = "0.1.0"
description = ""
authors = ["lorlen <filip.lew975@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
folium = "^0.15.0"
geopandas = "^0.14.0"
joblib = "^1.3.2"
mapclassify = "^2.6.0"
matplotlib = "^3.8.0"
osmnx = "^1.6.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.12.0"}
ipykernel = "^6.25.2"
isort = "^5.13.1"
jupyter = "^1.0.0"
nbconvert = "^7.9.2"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
